[package]
name = "rs_AR_Map"
version = "0.1.0"
authors = ["K-REBO <holmes10031208@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = {git = "https://github.com/yewstack/yew/",branch = "master"}
yew-material = { git = "https://github.com/hamza1311/yew-material/", branch = "master", features = ["full"] }
yewtil = "0.3.2"
wasm-bindgen = "0.2.69"
indoc = "1.0.3"
serde_json = "1.0.61"


[dependencies.web-sys]
version = "0.3.46"
features = [
	'Element',
	'CanvasRenderingContext2d',
	'Document',
	'Window',
	'WebGlRenderingContext',
	'Window',
	'HtmlCanvasElement',
]


[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
