[package]
name = "map"
version = "0.1.0"
authors = ["K-REBO <holmes10031208@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
# yew = {git = "https://github.com/yewstack/yew/",branch = "master"}
yew = "0.17.4"
serde_json = "1.0.64"
log = "0.4.14"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.73"
serde = "1.0.125"
anyhow = "1.0.40"


[dependencies.web-sys]
version = "0.3.46"
features = [
	'Element',
	'CanvasRenderingContext2d',
	'Document',
	'Window',
	'WebGlRenderingContext',
	'Window',
	'HtmlCanvasElement',
]


[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
